[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/GUI/Montserrat-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MainMenu2.gd" type="Script" id=2]
[ext_resource path="res://Assets/GUI/SimpleBox.tres" type="Theme" id=3]
[ext_resource path="res://Assets/GUI/SimpleBoxDark.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 79
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_top = 24.0
margin_right = 40.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Buttons"]
margin_left = 16.0
margin_top = 280.0
margin_right = 224.0
margin_bottom = 338.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_right = NodePath("../CreditsButton")
focus_neighbour_bottom = NodePath("../TutorialButton")
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialButton" type="Button" parent="Buttons"]
margin_left = 16.0
margin_top = 360.0
margin_right = 221.0
margin_bottom = 418.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_right = NodePath("../CreditsButton")
focus_neighbour_bottom = NodePath("../QuitButton")
text = "How to Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Buttons"]
margin_left = 16.0
margin_top = 440.0
margin_right = 224.0
margin_bottom = 498.0
focus_neighbour_top = NodePath("../TutorialButton")
focus_neighbour_right = NodePath("../CreditsButton")
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="Buttons"]
margin_left = 776.0
margin_top = 440.0
margin_right = 944.0
margin_bottom = 498.0
focus_neighbour_left = NodePath("../QuitButton")
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTitle" type="Label" parent="Buttons"]
margin_top = -24.0
margin_right = 960.0
margin_bottom = 168.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Projet ISH"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Buttons/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Buttons/CreditsButton" to="." method="_on_CreditsButton_pressed"]
